bppackaging/src/objects/Part_FIFO_Bucket_Activity_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>CO_Invoice_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Invoice Header</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>Part FIFO Bucket Activity Line Items</relationshipLabel>
        <relationshipName>Part_FIFO_Bucket_Activity_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Line Item</label>
        <referenceTo>CO_Line_Item__c</referenceTo>
        <relationshipName>Part_FIFO_Bucket_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Adjustment</label>
        <referenceTo>Part_FIFO_Bucket__c</referenceTo>
        <relationshipLabel>Part FIFO Bucket Activity Line Items (Part Adjustment)</relationshipLabel>
        <relationshipName>Part_FIFO_Bucket_Activity_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_FIFO_Bucket__c</fullName>
        <label>Part FIFO Bucket</label>
        <referenceTo>Part_FIFO_Bucket__c</referenceTo>
        <relationshipLabel>Part FIFO Bucket Activity Line Items</relationshipLabel>
        <relationshipName>Part_FIFO_Bucket_Activity_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Qty_Out__c</fullName>
        <label>Qty Out</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Part</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Part FIFO Bucket Activity Line Item</label>
    <nameField>
        <displayFormat>PBNLI-{00000000}</displayFormat>
        <label>Part FIFO Bucket Activity Line Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part FIFO Bucket Activity Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>